[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/Weapons.png" type="Texture" id=1]
[ext_resource path="res://Player/Weapon.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Sword",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Hulk",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Ram",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Swarm",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )

[node name="Blade1" type="Node2D" parent="."]
position = Vector2( 0, -32 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Blade1"]
frames = SubResource( 5 )
animation = "Hulk"

[node name="Area2D" type="Area2D" parent="Blade1"]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blade1/Area2D"]
shape = SubResource( 6 )

[node name="Blade2" type="Node2D" parent="."]
position = Vector2( 0, 32 )
rotation = 3.14159

[node name="AnimatedSprite" type="AnimatedSprite" parent="Blade2"]
frames = SubResource( 5 )
animation = "Hulk"

[node name="Area2D" type="Area2D" parent="Blade2"]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blade2/Area2D"]
shape = SubResource( 6 )
[connection signal="body_entered" from="Blade1/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Blade2/Area2D" to="." method="_on_Area2D_body_entered"]
